Fixing background image zoom-in on smaller devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,8 +12,6 @@ body {
   background-size: cover;
   font-family: 'Kodchasan', sans-serif;
   color:white;
-  background-size:100%;
-  width:100%;
   
 }
 
